# KastaarModem

./: .gitignore  CMakeLists.txt  Kconfig  README.md  idf_component.yml
docs/: index.html
examples/: README.md
examples/ESP-IDF/coap_example/main/: idf_component.yml  main.cpp
examples/ESP-IDF/non_volatile_example/: CMakeLists.txt
examples/ESP-IDF/non_volatile_example/main/: idf_component.yml  main.cpp
examples/ESP-IDF/socket_example/: CMakeLists.txt
examples/ESP-IDF/socket_example/main/: idf_component.yml  main.cpp
examples/ESP-IDF/socket_receive_example/: CMakeLists.txt
examples/ESP-IDF/socket_receive_example/main/: main.cpp
src/: KastaarModem.cpp  KastaarModem.hpp  modem.cpp  modem.hpp
src/proto/coap/: CoAPManager.cpp  CoAPManager.hpp  CoAPProfile.cpp  CoAPProfile.hpp
src/proto/socket/: Socket.cpp  Socket.hpp  SocketManager.cpp  SocketManager.hpp
src/tls/: NonVolatile.cpp  NonVolatile.hpp  TLSManager.cpp  TLSManager.hpp  TLSProfile.cpp  TLSProfile.hpp
